--- a/docs/xsys35dc.adoc
+++ b/docs/xsys35dc.adoc
@@ -55,5 +55,9 @@ reconstructed by this command:
 If you want to use the official System 3.x SDK, specify the generated
 `xsys35dc.hed` file in the `DIR.HED` file of your project directory.
 
+== Bugs
+`xsys35dc` cannot decompile scenario files compiled with
+xref:unicode.adoc[Unicode Mode].
+
 == See also
 xref:xsys35c.adoc[*xsys35c(1)*], xref:ald.adoc[*ald(1)*]
