--- a/docs/vsp.adoc
+++ b/docs/vsp.adoc
@@ -55,6 +55,10 @@ to `.png`, `.vsp`, `.pms` or `.qnt`, depending on the destination format.
   effective.  For example, an image with palette mask 0x7fff will overwrite the
   system palette 0 to 239.
 
+*--system2*::
+  (*pms*) Read/write in the old PMS format, which was used in old (System2 -
+  System3) AliceSoft games.
+
 == Examples
 
 The following converts _image.vsp_ to _image.png_:
