--- a/docs/alk.adoc
+++ b/docs/alk.adoc
@@ -1,7 +1,7 @@
 = alk(1)
 :doctype: manpage
 :manmanual: xsys35c manual
-:mansource: xsys35c
+:mansource: xsys35c {xsys35c-version}
 
 == Name
 alk - ALK archive utility
