--- a/docs/vsp.adoc
+++ b/docs/vsp.adoc
@@ -1,7 +1,7 @@
 = vsp(1)
 :doctype: manpage
 :manmanual: xsys35c manual
-:mansource: xsys35c
+:mansource: xsys35c {xsys35c-version}
 
 == Name
 vsp, pms, qnt - utilities for VSP, PMS, and QNT images
