--- a/docs/xsys35dc.adoc
+++ b/docs/xsys35dc.adoc
@@ -1,7 +1,7 @@
 = xsys35dc(1)
 :doctype: manpage
 :manmanual: xsys35c manual
-:mansource: xsys35c
+:mansource: xsys35c {xsys35c-version}
 
 == Name
 xsys35dc - System 3.x decompiler
